# fit-mini-app

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  requirements.in  requirements.txt  worker-entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_refresh_tokens.py  0003_add_created_by_user_id_to_exercises.py  0003_exercise_owner.py  0004_exercise_personalization.py  0005_users_telegram_id_bigint.py  0006_add_coach_client_invites.py  0007_add_nutrition_targets.py  0008_business_time_msk.py  0009_add_user_timezone.py  0010_optional_exercise_metadata.py  0011_add_body_measurements.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/dependencies/: auth.py
backend/app/api/v1/: admin.py  auth.py  billing.py  bot.py  coach.py  me.py  notifications.py  nutrition.py  programs.py  public.py  router.py  workouts.py
backend/app/core/: config.py  timezone.py
backend/app/db/: session.py
backend/app/middleware/: auth_middleware.py  request_context.py
backend/app/models/: __init__.py  billing.py  exercise.py  notification.py  nutrition.py  program.py  token.py  user.py
backend/app/schemas/: admin.py  auth.py  billing.py  bot.py  notification.py  nutrition.py  program.py  telegram_auth.py  user.py  workout.py
backend/app/services/: admin.py  billing.py  jwt.py  notifications.py  nutrition.py  profile.py  program_seed_data.py  programs.py  security.py  seed.py  telegram_auth.py  token_service.py  worker.py  workouts.py
backend/app/static/: admin.html  app.js  coach.html  index.html  styles.css
backend/app/static/js/: main.js
backend/app/static/js/core/: config.js  http.js  state.js  theme.js  ui.js
bot/: Dockerfile  requirements.in  requirements.txt
bot/app/: bot.py  config.py
deploy/: Caddyfile
scripts/: run_mypy.py
tests/: conftest.py  test_app.py
