[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-mini-app"
version = "0.1.0"
description = "Telegram Mini App для тренировок: FastAPI, мини-приложение, бот"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pre-commit>=3.0",
]

# Рабочий Python-код в backend/app (пакет app). Ruff/mypy запускаются из корня репозитория.

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "SIM108",
    "RUF001",
    "RUF002",
    "RUF003",
    # FastAPI: Depends() в аргументах по умолчанию — нормальный паттерн.
    "B008",
    # HTTPException из except — без цепочки исключений, типично для API.
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
mypy_path = "backend"
explicit_package_bases = true
packages = ["app"]
exclude = ["^backend/alembic/"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*"]
ignore_errors = true

# pydantic-settings: значения приходят из env при рантайме.
[[tool.mypy.overrides]]
module = ["app.core.config"]
disable_error_code = ["call-arg"]

# Постепенно ужесточать типизацию; пока не блокируем CI.
[[tool.mypy.overrides]]
module = [
    "app.services.telegram_auth",
    "app.services.programs",
    "app.services.billing",
    "app.api.v1.auth",
    "app.api.v1.admin",
]
ignore_errors = true
